# lab-safety-system

./: .gitignore  pyproject.toml
backend/: .env  main.py  requirements.txt
backend/app/: config.py  database.py  dataset_loader.py  embedding.py  llm_client.py  main.py  models.py  rag_engine.py
backend/app/routers/: image_inspect.py  inspection.py  qa.py  user.py
data/knowledge/: test.txt
frontend/: frontendpackage.json  index.html  package-lock.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
frontend/src/views/: Home.vue  ImageInspect.vue  InspectionManage.vue
scripts/: build_knowledge_base.py
