[project]
name = "lab-safety-system"
version = "0.1.0"
description = "实验室安全问答系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pymysql==1.1.0",
    "transformers==4.35.2",
    "torch==2.2.0",
    "sentence-transformers>=2.7.0",
    "chromadb==0.4.18",
    "python-multipart==0.0.6",
    "pypdf2==3.0.1",
    "python-docx==1.1.0",
    "python-dotenv==1.0.0",
    "ultralytics==8.0.200",
    "opencv-python-headless==4.8.1.78",
    "pillow==10.1.0",
    "numpy<2.0"
]

[project.scripts]
run = "backend.run:main"